# native-layer

./: .gitmodules  CMakeLists.txt  PLUGIN_DEV_GUIDE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
demo/cpp/: Commands.txt  README.md  agent_adk.py  agent_langchain.py  download_simsimd.py  plugin.cpp  test_plugin.py
demo/rust/: .gitignore  Cargo.toml  Commands.txt  README.md  agent_langchain.py
demo/rust/src/: lib.rs
native_layer/: CMakeLists.txt  __init__.py
native_layer/adapters/: adk.py  langchain.py  ollama.py
native_layer/include/: os.h  plugin_layer.h  plugin_manager.h  watcher.h
native_layer/include/bindings/: plugin_layer.rs  plugin_layer.zig
native_layer/src/: binding.cpp  plugin_manager.cpp  watcher.cpp
native_layer/tests/: conftest.py  test_langchain_adapter.py  test_langchain_mock_agent.py  test_native_layer.py
native_layer/tests/plugins/: libmath.cpp
